crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fn_field_access_owned_consume.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fn_field_access_owned_consume

struct Callback { run: ~() -> String }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn consume(v0: ~String) -> String =
  ""

fn test(v1: ~String) -> String =
  let v5: ~() -> String = make_closure(lambda$27, [v1])
  let v2: ~Callback = construct Callback(v5)
  let v6: ~() -> String = project v2.0
  let v7: String = call_closure v6()
  v7

fn lambda$27(v3: ~String) -> String =
  let v4: String = call consume(v3)
  v4
