crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fn_nested.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fn_nested

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn consume(v0: ~String) -> String =
  v0

fn make_nested(v1: ~String) -> ~() -> ~() -> String =
  let v6: ~() -> ~() -> String = make_closure(lambda$26, [v1])
  v6

fn test(v7: ~String) -> String =
  let v8: ~() -> ~() -> String = call make_nested(v7)
  let v9: ~() -> String = call_closure v8()
  let v10: String = call_closure v9()
  v10

fn lambda$27(v3: ~String) -> String =
  let v4: String = call consume(v3)
  v4

fn lambda$26(v2: ~String) -> ~() -> String =
  let v5: ~() -> String = make_closure(lambda$27, [v2])
  v5
