crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fn_returned_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fn_returned_ok

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
fn consume(v0: ~String) -> String =
  ""

fn make_owned_fn(v1: ~String) -> ~() -> String =
  let v4: ~() -> String = make_closure(lambda$33, [v1])
  v4

fn test(v5: ~String) -> String =
  let v6: ~() -> String = call make_owned_fn(v5)
  let v7: String = call_closure v6()
  v7

fn lambda$33(v2: ~String) -> String =
  let v3: String = call consume(v2)
  v3
