crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fn_through_generic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fn_through_generic

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn consume(v0: ~String) -> String =
  ""

fn apply(v1: ~(b11) -> String, v2: b11) -> String =
  let v3: String = call_closure v1(v2)
  v3

fn test(v4: ~String) -> String =
  let v7: (~String) -> String = make_closure(lambda$28, [])
  let v8: String = call apply(v7, v4)
  v8

fn lambda$28(v5: ~String) -> String =
  let v6: String = call consume(v5)
  v6
