crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fold_closure_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fold_closure_ok

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn fold(v0: List[i11], v1: k11, v2: (k11, i11) -> k11) -> k11 =
  switch v0 {
    1 ->
      v1
    0 (v3: i11, v4: List[i11]) ->
      let v5: k11 = call_closure v2(v1, v3)
      let v6: k11 = call fold(v4, v5, v2)
      v6
  }

fn test() -> ~Option[Int] =
  let v7: List[Int] = construct List::Nil#1()
  let v8: List[Int] = construct List::Cons#0(1, v7)
  let v9: ~Option[Int] = construct Option::Some#0(0)
  let v15: (~Option[Int], Int) -> ~Option[Int] = make_closure(lambda$26, [])
  let v16: ~Option[Int] = call fold(v8, v9, v15)
  v16

fn lambda$26(v10: ~Option[Int], v11: Int) -> ~Option[Int] =
  switch v10 {
    0 (v12: c) ->
      let v13: ~Option[Int] = construct Option::Some#0(v11)
      v13
    1 ->
      let v14: ~Option[Int] = construct Option::Some#0(v11)
      v14
  }
