crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fold_literal_acc.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fold_literal_acc

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn fold(v0: List[p8], v1: r8, v2: (r8, p8) -> r8) -> r8 =
  switch v0 {
    1 ->
      v1
    0 (v3: p8, v4: List[p8]) ->
      let v5: r8 = call_closure v2(v1, v3)
      let v6: r8 = call fold(v4, v5, v2)
      v6
  }

fn test() -> Int =
  let v7: List[Int] = construct List::Nil#1()
  let v8: List[Int] = construct List::Cons#0(3, v7)
  let v9: List[Int] = construct List::Cons#0(2, v8)
  let v10: List[Int] = construct List::Cons#0(1, v9)
  let v14: (Int, Int) -> Int = make_closure(lambda$26, [])
  let v15: Int = call fold(v10, 0, v14)
  v15

fn lambda$26(v11: Int, v12: Int) -> Int =
  let v13: Int = add_int(v11, v12)
  v13
